WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196708
ASSERTION FAILED: !scope.exception() || !hasProperty in JSObject::get
https://bugs.webkit.org/show_bug.cgi?id=196708
Summary
ASSERTION FAILED: !scope.exception() || !hasProperty in JSObject::get
Tadeu Zagallo
Reported
2019-04-08 14:34:37 PDT
...
Attachments
Patch
(3.06 KB, patch)
2019-04-08 14:46 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.07 KB, patch)
2019-04-09 00:16 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2019-04-08 14:35:31 PDT
<
rdar://problem/49556803
>
Tadeu Zagallo
Comment 2
2019-04-08 14:46:54 PDT
Created
attachment 366984
[details]
Patch
Yusuke Suzuki
Comment 3
2019-04-08 19:00:06 PDT
Comment on
attachment 366984
[details]
Patch r=me
Yusuke Suzuki
Comment 4
2019-04-08 19:00:19 PDT
Comment on
attachment 366984
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=366984&action=review
> Source/JavaScriptCore/jit/JITOperations.cpp:2375 > EXCEPTION_ASSERT(!throwScope.exception() || !hasProperty);
You can remove this line.
Tadeu Zagallo
Comment 5
2019-04-09 00:16:20 PDT
Created
attachment 367031
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2019-04-09 00:54:23 PDT
Comment on
attachment 367031
[details]
Patch for landing Clearing flags on attachment: 367031 Committed
r244069
: <
https://trac.webkit.org/changeset/244069
>
WebKit Commit Bot
Comment 7
2019-04-09 00:54:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug